syntax = "proto3";

package wafie.v1;

message StartRelayRequest{
  repeated string appsecgw_ip = 1;
  string appsecgw_listener_port = 2;
  string app_listener_port = 3;
}

message StartRelayResponse{
  string tcp_relay_status = 1;
  string nft_status = 2;
}

message StopRelayRequest{}
message StopRelayResponse{}


service RelayService {
  rpc StartRelay(StartRelayRequest) returns (StartRelayResponse);
  rpc StopRelay(StopRelayRequest) returns (StopRelayResponse);
}